Created Vis classes, loaded csv data

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,14 @@
 		-->
 	</head>
 	<body>
+		<div id="baseMap"></div>
+		<div id="cultureChart"></div>
+		<div id="proportionalPieChart"></div>
+		<div id="reportsOverTimeChart"></div>
+		<div id="witnessesChart"></div>
+		<div id="reportMap"></div>
+		<div id="dailyReports"></div>
+
 		<!-- embedding JS libraries -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
@@ -25,6 +33,13 @@
 		<script src="https://d3js.org/d3.v7.min.js"></script>
 
 		<!-- Add Scripts -->
-		<!-- <script src="js/barchart.js"></script> -->
+		<script src="js/main.js"></script>
+		<script src="js/airportAndMilitaryMap.js"></script>
+		<script src="js/dailyReports.js"></script>
+		<script src="js/popularCultureChart.js"></script>
+		<script src="js/proportionalPieChart.js"></script>
+		<script src="js/reportMap.js"></script>
+		<script src="js/reportsOverTimeChart.js"></script>
+		<script src="js/witnessesBarChart.js"></script>
 	</body>
 </html>
