--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,27 @@
 		-->
 	</head>
 	<body>
-		<div id="baseMap"></div>
-		<div id="cultureChart"></div>
-		<div id="proportionalPieChart"></div>
-		<div id="reportsOverTimeChart"></div>
-		<div id="witnessesChart"></div>
-		<div id="reportMap"></div>
-		<div id="dailyReports"></div>
+		<div class="col" id="dailyReports" style="height: 400; background-color: violet;">
+			dailyReports
+		</div>
+		<div id="baseMap" style="height: 100px; width: 100px; background-color: red;">
+			baseMap
+		</div>
+		<div id="cultureChart" style="height: 100px; width: 100px; background-color: orange;">
+			cultureChart
+		</div>
+		<div id="proportionalPieChart" style="height: 100px; width: 100px; background-color: yellow;">
+			proportionalPieChart
+		</div>
+		<div id="reportsOverTimeChart" style="height: 100px; width: 100px; background-color: green;">
+			reportsOverTimeChart
+		</div>
+		<div id="witnessesChart" style="height: 100px; width: 100px; background-color: blue;">
+			witnessesChart
+		</div>
+		<div id="reportMap" style="height: 100px; width: 100px; background-color: indigo;">
+			reportMap
+		</div>
 
 		<!-- embedding JS libraries -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
@@ -33,7 +47,6 @@
 		<script src="https://d3js.org/d3.v7.min.js"></script>
 
 		<!-- Add Scripts -->
-		<script src="js/main.js"></script>
 		<script src="js/airportAndMilitaryMap.js"></script>
 		<script src="js/dailyReports.js"></script>
 		<script src="js/popularCultureChart.js"></script>
@@ -41,5 +54,6 @@
 		<script src="js/reportMap.js"></script>
 		<script src="js/reportsOverTimeChart.js"></script>
 		<script src="js/witnessesBarChart.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
