Changed page layout, added first iplementation of graph

--- a/src/index.html
+++ b/src/index.html
@@ -18,26 +18,93 @@
 		-->
 	</head>
 	<body>
-		<div class="col" id="dailyReports" style="height: 400; background-color: violet;">
-			dailyReports
-		</div>
-		<div id="baseMap" style="height: 100px; width: 100px; background-color: red;">
-			baseMap
-		</div>
-		<div id="cultureChart" style="height: 100px; width: 100px; background-color: orange;">
-			cultureChart
-		</div>
-		<div id="proportionalPieChart" style="height: 100px; width: 100px; background-color: yellow;">
-			proportionalPieChart
-		</div>
-		<div id="reportsOverTimeChart" style="height: 100px; width: 100px; background-color: green;">
-			reportsOverTimeChart
-		</div>
-		<div id="witnessesChart" style="height: 100px; width: 100px; background-color: blue;">
-			witnessesChart
-		</div>
-		<div id="reportMap" style="height: 100px; width: 100px; background-color: indigo;">
-			reportMap
+		<div class="container-fluid" style="padding-top: 1vh">
+			<div class="row">
+				<div class="col-10 offset-1" style="border: thin solid grey; border-radius: 5px;">
+					<!-- HEADING -->
+					<div class="row d-flex align-items-center" id="pageTitle" style="height: 35vh; padding: 0; background: #bcd4e6; border-bottom: thin solid grey">
+						<h1>Aliens Among us</h1>
+						<h2>Canadian Alien Encounters</h2>
+						<h2>1930 - 2025</h2>
+					</div>
+
+					<!-- INTRO -->
+					<div class="row" style="height: 20vh; background: #ffffff; padding: 1vh">
+						<div class="col" style="height: 100%; border: thin solid lightgrey; border-radius: 5px; background: #d6e2e9">
+							<p>Intro: TODO</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laboriosam, earum amet, ipsum distinctio facere officiis numquam voluptatem labore, dolore animi? Id nam sed voluptates aliquam facilis asperiores, non porro.</p>
+						</div>
+					</div>
+
+					<!-- VISUALIZATIONS -->
+					<div class="row" style="height: 200vh; padding-top: 0; padding-left: 1vh; padding-right: 1vh; padding-bottom: 1vh">
+						<div class="col" style="border: thin solid rgba(211,211,211,0.73); border-radius: 5px; background: rgba(214,226,233,0.42)">
+							<div class="row">
+								<div class="col">
+									<div id="reportMap" style="height: 100vh; width: 100%; background-color: red;">
+										reportMap
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<!-- MY VIS -->
+								<div class="col">
+									<div id="reportsOverTimeChart" style="height: 40vh; width: 100%; background-color: orange;"></div>
+								</div>
+								<!-- <div class="col-5">
+									<div id="reportsOverTimeTooltip" style="height: 40vh; width: 100%; background-color: rgb(235, 196, 122);">
+										Tooltip
+									</div>
+								</div> -->
+							</div>
+							<div class="row">
+								<div class="col">
+									<div id="witnessesChart" style="height: 100vh; width: 100%; background-color: yellow;">
+										witnessesChart
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<div id="dailyReports" style="height: 100vh; width: 100%; background-color: green;">
+										dailyReports
+										<img src="Images/clockSketch.png">
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<div id="cultureChart" style="height: 100vh; width: 100%; background-color: blue;">
+										cultureChart
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<div id="baseMap" style="height: 100vh; width: 100%; background-color: indigo;">
+										baseMap
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<div id="proportionalPieChart" style="height: 100vh; width: 100%; background-color: violet;">
+										proportionalPieChart
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- CONCLUSION -->
+					<div class="row" style="height: 20vh; background: #ffffff; padding: 1vh">
+						<div class="col" style="height: 100%; border: thin solid lightgrey; border-radius: 5px; background: #d6e2e9">
+							<p>Conclusion: TODO</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laboriosam, earum amet, ipsum distinctio facere officiis numquam voluptatem labore, dolore animi? Id nam sed voluptates aliquam facilis asperiores, non porro.</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<!-- embedding JS libraries -->
