add witness table to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,18 @@
 			witnessesChart
 		</div>
 		<div id="reportMap" style="height: 100px; width: 100px; background-color: indigo;">
-			reportMap
+			<h1>Witnesses Visualization</h1>
+
+			<table id="witness-table">
+			    <thead>
+			      <tr>
+				<th>Number of Witnesses</th>
+				<th>Percentage of Sightings</th>
+			      </tr>
+			    </thead>
+			    <tbody></tbody>
+			</table>
+
 		</div>
 
 		<!-- embedding JS libraries -->
