Fixed graph - x axis not showing

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 	<body>
 		<div class="container-fluid" style="padding-top: 1vh">
 			<div class="row">
-				<div class="col-10 offset-1" style="border: thin solid grey; border-radius: 5px;">
+				<div class="col" style="border: thin solid grey; border-radius: 5px;">
 					<!-- HEADING -->
 					<div class="row d-flex align-items-center" id="pageTitle" style="height: 35vh; padding: 0; background: #bcd4e6; border-bottom: thin solid grey">
 						<h1>Aliens Among us</h1>
