Began Implementing sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -48,14 +48,12 @@
 							</div>
 							<div class="row">
 								<!-- MY VIS -->
-								<div class="col">
+								<div class="col-7">
 									<div id="reportsOverTimeChart" style="height: 40vh; width: 100%; background-color: orange;"></div>
 								</div>
-								<!-- <div class="col-5">
-									<div id="reportsOverTimeTooltip" style="height: 40vh; width: 100%; background-color: rgb(235, 196, 122);">
-										Tooltip
-									</div>
-								</div> -->
+								<div class="col-5">
+									<div id="reportsOverTimeTooltip" style="height: 40vh; width: 100%; background-color: rgb(235, 196, 122);"></div>
+								</div>
 							</div>
 							<div class="row">
 								<div class="col">
