add clock to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,15 @@
 			proportionalPieChart
 		</div>
 		<div id="reportsOverTimeChart" style="height: 100px; width: 100px; background-color: green;">
-			reportsOverTimeChart
+			<h2>UFO Clock</h2>
+			<div class="clock-container">
+			    <svg id="clock" width="300" height="300"></svg>
+			</div>
+			<div class="controls">
+			    <button class="button" id="play">Play</button>
+			    <span class="time-display" id="time-display">12 AM</span>
+			    <button class="button" id="reset">Reset</button>
+			</div>
 		</div>
 		<div id="witnessesChart" style="height: 100px; width: 100px; background-color: blue;">
 			witnessesChart
