added clock to correct spot in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,15 @@
 	</head>
 	<body>
 		<div class="col" id="dailyReports" style="height: 400; background-color: violet;">
-			dailyReports
+			<h2>UFO Clock</h2>
+			<div class="clock-container">
+			    <svg id="clock" width="300" height="300"></svg>
+			</div>
+			<div class="controls">
+			    <button class="button" id="play">Play</button>
+			    <span class="time-display" id="time-display">12 AM</span>
+			    <button class="button" id="reset">Reset</button>
+			</div>
 		</div>
 		<div id="baseMap" style="height: 100px; width: 100px; background-color: red;">
 			baseMap
@@ -31,15 +39,7 @@
 			proportionalPieChart
 		</div>
 		<div id="reportsOverTimeChart" style="height: 100px; width: 100px; background-color: green;">
-			<h2>UFO Clock</h2>
-			<div class="clock-container">
-			    <svg id="clock" width="300" height="300"></svg>
-			</div>
-			<div class="controls">
-			    <button class="button" id="play">Play</button>
-			    <span class="time-display" id="time-display">12 AM</span>
-			    <button class="button" id="reset">Reset</button>
-			</div>
+			reportsOverTimeChart
 		</div>
 		<div id="witnessesChart" style="height: 100px; width: 100px; background-color: blue;">
 			witnessesChart
