linked clock.css to index.html
also dailyReports.js is deferred to clock.css

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 
 		<!-- own CSS -->
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="clock.css">
+		<script defer src="dailyReports.js"></script>
 
 		<!-- Repo Link
 		https://github.com/DimitriosGkiokmema/CSC316-Project
