put witness table in correct place in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,6 @@
 			reportsOverTimeChart
 		</div>
 		<div id="witnessesChart" style="height: 100px; width: 100px; background-color: blue;">
-			witnessesChart
-		</div>
-		<div id="reportMap" style="height: 100px; width: 100px; background-color: indigo;">
 			<h1>Witnesses Visualization</h1>
 
 			<table id="witness-table">
@@ -58,6 +55,9 @@
 			    </thead>
 			    <tbody></tbody>
 			</table>
+		</div>
+		<div id="reportMap" style="height: 100px; width: 100px; background-color: indigo;">
+			reportMap
 
 		</div>
 
