removed some style from index.html

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 		-->
 	</head>
 	<body>
-		<div class="col" id="dailyReports" style="height: 400; background-color: violet;">
+		<div class="col" id="dailyReports">
 			<h2>UFO Clock</h2>
 			<div class="clock-container">
 			    <svg id="clock" width="300" height="300"></svg>
@@ -43,7 +43,7 @@
 		<div id="reportsOverTimeChart" style="height: 100px; width: 100px; background-color: green;">
 			reportsOverTimeChart
 		</div>
-		<div id="witnessesChart" style="height: 100px; width: 100px; background-color: blue;">
+		<div id="witnessesChart">
 			<h1>Witnesses Visualization</h1>
 
 			<table id="witness-table">
