--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 		<!-- own CSS -->
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="clock.css">
+		<link rel="stylesheet" href="css/clock.css">
 		<script defer src="dailyReports.js"></script>
 
 		<!-- Repo Link
