--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 		<!-- own CSS -->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/clock.css">
-		<script defer src="dailyReports.js"></script>
+		<script defer src="clock.js"></script>
 
 		<!-- Repo Link
 		https://github.com/DimitriosGkiokmema/CSC316-Project
