--- a/src/index.html
+++ b/src/index.html
@@ -76,5 +76,6 @@
 		<script src="js/reportsOverTimeChart.js"></script>
 		<script src="js/witnessesBarChart.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/clock.js"></script>
 	</body>
 </html>
