--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
 								<div class="col">
 									<div id="dailyReports" style="height: 100vh; width: 100%; background-color: green;">
 										dailyReports
-										<img src="Images/clockSketch.png">
+										<!-- <img src="Images/clockSketch.png"> -->
 									</div>
 								</div>
 							</div>
