--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 
 		<!-- Load CSS libraries -->
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+			  integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+			  crossorigin=""/>
 
 		<!-- own CSS -->
 		<link rel="stylesheet" href="css/style.css">
@@ -36,12 +38,26 @@
 		<div id="witnessesChart" style="height: 100px; width: 100px; background-color: blue;">
 			witnessesChart
 		</div>
-		<div id="reportMap" style="height: 100px; width: 100px; background-color: indigo;">
-			reportMap
+
+		<div id="container">
+			<div id="map-container">
+				<div id="menu">
+					<button onclick="showSightingsMap()">Key Sightings</button>
+					<button onclick="showAirportsMap()">Sightings vs. Canadian Airports and Airbases</button>
+				</div>
+				<div id="map"></div>
+			</div>
+			<div id="info-panel">
+				<h2>Key Sightings</h2>
+				<p>Click on a UFO to see report details.</p>
+			</div>
 		</div>
 
 		<!-- embedding JS libraries -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+		<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+				integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+				crossorigin=""></script>
 
 		<!-- d3 -->
 		<script src="https://d3js.org/d3.v7.min.js"></script>
@@ -51,7 +67,7 @@
 		<script src="js/dailyReports.js"></script>
 		<script src="js/popularCultureChart.js"></script>
 		<script src="js/proportionalPieChart.js"></script>
-		<script src="js/reportMap.js"></script>
+		<script src="js/maps.js"></script>
 		<script src="js/reportsOverTimeChart.js"></script>
 		<script src="js/witnessesBarChart.js"></script>
 		<script src="js/main.js"></script>
