--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<!-- Bootstrap & Leaflet CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
-		
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/styles.css">
 		<link rel="stylesheet" href="css/clock.css">
@@ -22,7 +23,10 @@
 		<!-- Map Visualization Section (from map.html) -->
 		<section id="mapSection" class="page-section">
 			<header>
-			<h1>Tracking UFO Sightings</h1>
+			<h1>Aliens Among us</h1>
+			<h1>Canadian Alien Encounters: Tracking UFO Sightings</h1>
+			<h1>1930 - 2025</h1>
+			<br>
 			<h3>Dive into historical trends and witness details in Canada’s mysterious encounters</h3>
 			</header>
 			<div id="top-controls">
@@ -48,7 +52,7 @@
 			</div>
 			<div id="main-content-map">
 				<div id="map-container">
-					<div id="map" style="width: 600px; height: 500px;"></div>
+					<div id="2d-map" style="width: 600px; height: 500px;"></div>
 				</div>
 				<div id="filter-container">
 					<div id="witnesses-filter">
@@ -72,7 +76,24 @@
 				</div>
 			</div>
 		</section>
-		
+
+		<!-- Zoomed map Section-->
+		<section class="page-section">
+			<div id="container" style="height: 100%; width: 100%;">
+				<div id="zoom-map-container">
+					<div id="menu">
+						<button onclick="showSightingsMap()">Key Sightings</button>
+						<button onclick="showAirportsMap()">Sightings vs. Canadian Airports and Airbases</button>
+					</div>
+					<div id="map"></div>
+				</div>
+				<div id="info-panel">
+					<h2>Key Sightings</h2>
+					<p>Click on a UFO to see report details.</p>
+				</div>
+			</div>
+		</section>
+
 		<!-- Shape Visualization Section (from shape.html) -->
 		<section id="shapeSection" class="page-section">
 			<div id="page-title">
@@ -233,12 +254,14 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 		<script src="https://d3js.org/d3.v6.min.js"></script>
+		<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 		
 
 		<!-- Custom JS -->
 		<script src="js/scroll.js"></script>
 		<script src="js/witness.js"></script>
 		<script src="js/clock.js"></script>
+		<script src="js/zoomMap.js"></script>
 		<script src="js/map.js"></script>
 		<script src="js/shape.js"></script>
 	</body>
