adding my graph

--- a/index.html
+++ b/index.html
@@ -155,6 +155,15 @@
 			</div>
 		</section>
 		
+		<section id="lineChart" class="page-section">
+			<div class="col-7">
+				<div id="reportsOverTimeChart" style="min-height: 40vh; width: 100%; background-color: orange;"></div>
+			</div>
+			<div class="col-5">
+				<div id="reportsOverTimeTooltip" style="min-height: 40vh; width: 100%; background-color: rgb(235, 196, 122);"></div>
+			</div>
+		</section>
+
 		<section id="clockSection" class="page-section">
 		<div class="clock-container">
 			<h1>UFO Sightings by Time of Day</h1>
