Added code for my line, will fix bugs later

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 			<br>
 			<h3>Dive into historical trends and witness details in Canada’s mysterious encounters</h3>
 			</header>
+			<div class="row" style="border: thin solid lightgrey; border-radius: 5px; background: #d6e2e9">
+				<p>Intro: TODO</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laboriosam, earum amet, ipsum distinctio facere officiis numquam voluptatem labore, dolore animi? Id nam sed voluptates aliquam facilis asperiores, non porro.</p>
+			</div>
 			<div id="top-controls">
 				<div id="view-controls">
 					<button id="all-reports-btn" class="view-btn" onclick="changeView('all')">All Reports</button>
@@ -155,14 +159,15 @@
 			</div>
 		</section>
 		
-		<section id="lineChart" class="page-section">
+		<!-- Dimitrios's line chart: fix later -->
+		<!-- <section id="lineChart" class="page-section">
 			<div class="col-7">
 				<div id="reportsOverTimeChart" style="min-height: 40vh; width: 100%; background-color: orange;"></div>
 			</div>
 			<div class="col-5">
 				<div id="reportsOverTimeTooltip" style="min-height: 40vh; width: 100%; background-color: rgb(235, 196, 122);"></div>
 			</div>
-		</section>
+		</section> -->
 
 		<section id="clockSection" class="page-section">
 		<div class="clock-container">
@@ -273,5 +278,7 @@
 		<script src="js/zoomMap.js"></script>
 		<script src="js/map.js"></script>
 		<script src="js/shape.js"></script>
+		<script src="js/reportsLineGraph.js"></script>
+		<!-- <script src="js/main.js"></script> -->
 	</body>
 </html>
