Solving Merge Issues

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
 		<!-- Dimitrios's line chart: fix later -->
 		<!-- <section id="lineChart" class="page-section">
 			<div class="col-7">
-				<div id="reportsOverTimeChart" style="min-height: 40vh; width: 100%; background-color: orange;"></div>
+				<div id="reportsOverTimeChart" style="min-height: 40vh; width: 100%"></div>
 			</div>
 			<div class="col-5">
-				<div id="reportsOverTimeTooltip" style="min-height: 40vh; width: 100%; background-color: rgb(235, 196, 122);"></div>
+				<div id="reportsOverTimeTooltip" style="min-height: 40vh; width: 100%;"></div>
 			</div>
 		</section> -->
 
@@ -248,6 +248,10 @@
 			</div>
 		</div>
 		</section>
+		<div class="row" style="border: thin solid lightgrey; border-radius: 5px; background: #d6e2e9">
+			<p>Conclusion: TODO</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laboriosam, earum amet, ipsum distinctio facere officiis numquam voluptatem labore, dolore animi? Id nam sed voluptates aliquam facilis asperiores, non porro.</p>
+		</div>
 		</div>
 
 		<!-- Navigation Dots -->
@@ -257,7 +261,7 @@
 			<span class="dot" onclick="scrollToSection(2)"></span>
 			<span class="dot" onclick="scrollToSection(3)"></span>
 			<span class="dot" onclick="scrollToSection(4)"></span>
-			<span class="dot" onclick="scrollToSection(5)"></span>
+			<!-- <span class="dot" onclick="scrollToSection(5)"></span> -->
 		</div>
 	
 		<script src="js/scroll.js"></script>
@@ -278,7 +282,7 @@
 		<script src="js/zoomMap.js"></script>
 		<script src="js/map.js"></script>
 		<script src="js/shape.js"></script>
-		<script src="js/reportsLineGraph.js"></script>
-		<!-- <script src="js/main.js"></script> -->
+		<!-- <script src="js/reportsLineGraph.js"></script> -->
+		<script src="js/main.js"></script>
 	</body>
 </html>
