Switching to array

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 			<!-- Line chart not displaying: fix later -->
 			<section id="lineChart" class="page-section">
 				<div class="col-7">
-					<div id="reportsOverTimeChart" style="min-height: 40vh; width: 100%; background-color: red;"></div>
+					<div id="reportsOverTimeChart" style="min-height: 40vh; width: 100%;"></div>
 				</div>
 				<div class="col-5">
 					<div id="reportsOverTimeTooltip" style="min-height: 40vh; width: 100%;"></div>
