--- a/index.html
+++ b/index.html
@@ -26,58 +26,6 @@
 					<h1>Aliens Among us</h1>
 					<h2>Canadian Alien Encounters: <br> Tracking UFO Sightings <br> 1930 - 2025</h2>
 					<h3>Dive into historical trends and witness details in Canada’s mysterious extraterrestrial encounters</h3>
-					<h3>Intro: TODO</h3>
-					<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laboriosam, earum amet, ipsum distinctio facere officiis numquam voluptatem labore, dolore animi? Id nam sed voluptates aliquam facilis asperiores, non porro.</h3>
-				</div>
-			</section>
-
-			<!-- Map Visualization Section (from map.html) -->
-			<section id="mapSection" class="page-section">
-				<div id="top-controls">
-					<div id="view-controls">
-						<button id="all-reports-btn" class="view-btn" onclick="changeView('all')">All Reports</button>
-						<button id="observers-btn" class="view-btn" onclick="changeView('observers')">View by Observers</button>
-						<button id="ships-btn" class="view-btn" onclick="changeView('ships')">View by Ships</button>
-					</div>
-					<div id="decade-controls-map">
-						<label for="decade-dropdown-map">Select Decade:</label>
-						<select id="decade-dropdown-map" onchange="filterSightings()">
-							<option value="all">All Reports</option>
-							<option value="1960">1960s and prior</option>
-							<option value="1970">1970s</option>
-							<option value="1980">1980s</option>
-							<option value="1990">1990s</option>
-							<option value="2000">2000s</option>
-							<option value="2010">2010s</option>
-							<option value="2020">2020s</option>
-						</select>
-						<span id="decade-label-map" style="display: none;">1960s and prior</span>
-					</div>
-				</div>
-				<div id="main-content-map">
-					<div id="map-container">
-						<div id="2d-map" style="width: 600px; height: 500px;"></div>
-					</div>
-					<div id="filter-container">
-						<div id="witnesses-filter">
-							<label for="witnesses-dropdown">Filter by Number of Observers:</label>
-							<select id="witnesses-dropdown" onchange="filterSightings()">
-								<option value="all">All</option>
-								<option value="solo">Solo</option>
-								<option value="small-group">Small Group (2-5)</option>
-								<option value="crowd">Crowd (6+)</option>
-							</select>
-						</div>
-						<div id="ships-filter">
-							<label for="ships-dropdown">Filter by Number of Ships:</label>
-							<select id="ships-dropdown" onchange="filterSightings()">
-								<option value="all">All</option>
-								<option value="solo">Solo (1 ship)</option>
-								<option value="small-group">Small Group (2-5 ships)</option>
-								<option value="crowd">Crowd (6+ ships)</option>
-							</select>
-						</div>
-					</div>
 				</div>
 			</section>
 
@@ -98,16 +46,23 @@
 				</div>
 			</section>
 
-			<!-- Shape Visualization Section (from shape.html) -->
+			<!-- Shape Visualization & Line Chart -->
 			<section id="shapeSection" class="page-section">
 				<div id="page-title">
 					<h2>A Decade-by-Decade Analysis of Encounters and Cultural Impact</h2>
 				</div>
 				<div id="main-content-shape">
-					<div id="line-chart-container">
-						<canvas id="line-chart"></canvas>
+					<div id="line-chart-container" style="display: flex;">
+						<!-- <canvas id="line-chart"></canvas> -->
+						<div class="col-7">
+							<div id="reportsOverTimeChart" style="min-height: 30vh; width: 100%;"></div>
+						</div>
+						<div class="col-5">
+							<div id="reportsOverTimeTooltip" style="min-height: 40vh; width: 100%;"></div>
+						</div>
 					</div>
-					<div id="decade-controls-shape">
+					
+					<div id="decade-controls-shape" style="margin-top: 10vh;">
 						<label for="decade-dropdown-shape">Select Decade:</label>
 						<select id="decade-dropdown-shape">
 							<option value="All">All Reports</option>
@@ -156,16 +111,6 @@
 						<h3>Pop Culture References</h3>
 						<p>Insert your pop culture commentary or text here...</p>
 					</div>
-				</div>
-			</section>
-			
-			<!-- Line chart not displaying: fix later -->
-			<section id="lineChart" class="page-section">
-				<div class="col-7">
-					<div id="reportsOverTimeChart" style="min-height: 40vh; width: 100%;"></div>
-				</div>
-				<div class="col-5">
-					<div id="reportsOverTimeTooltip" style="min-height: 40vh; width: 100%;"></div>
 				</div>
 			</section>
 
@@ -266,8 +211,6 @@
 			<span class="dot" onclick="scrollToSection(3)"></span>
 			<span class="dot" onclick="scrollToSection(4)"></span>
 			<span class="dot" onclick="scrollToSection(5)"></span>
-			<span class="dot" onclick="scrollToSection(6)"></span>
-			<span class="dot" onclick="scrollToSection(7)"></span>
 		</div>
 	
 
@@ -285,7 +228,6 @@
 		<script src="js/witness.js"></script>
 		<script src="js/clock.js"></script>
 		<script src="js/zoomMap.js"></script>
-		<script src="js/map.js"></script>
 		<script src="js/shape.js"></script>
 		<script src="js/reportsLineGraph.js"></script>
 		<script src="js/main.js"></script>
